# cosam-sched

./: .gitattributes  .gitignore  Cargo.toml  GOOGLE_SHEETS.md  LICENSE  README.md  WORK_PLAN.md  clippy.toml  cpanfile  google-sheets-config.example.yaml  package-lock.json  package.json  rebuild_json.sh
apps/cosam-convert/: Cargo.toml  build.rs
apps/cosam-convert/src/: brand_bridge.rs  conflicts.rs  embed.rs  layout_config.rs  layout_defaults.rs  main.rs  static_html.rs  widget_config.rs  widget_embed.rs
apps/cosam-editor/: Cargo.toml
apps/cosam-editor-dioxus/: Cargo.toml
apps/cosam-editor-dioxus/src/: style.css
apps/cosam-editor-dioxus/src/ui/: editor.rs  mod.rs  schedule_data.rs
apps/cosam-editor-gpui/: Cargo.toml
apps/cosam-editor-gpui/src/: main.rs
apps/cosam-editor-gpui/src/menu/: macos.rs  mod.rs  windows.rs
apps/cosam-editor-gpui/src/shortcuts/: macos.rs  mod.rs
apps/cosam-editor-gpui/src/ui/: day_tabs.rs  detail_pane.rs  editor.rs  mod.rs  panel_card.rs  schedule_data.rs  sidebar.rs
apps/cosam-editor/src/: main.rs  menu.rs  settings.rs  style.css
apps/cosam-editor/src/menu/: macos.rs  mod.rs  windows.rs
apps/cosam-editor/src/shortcuts/: mod.rs  windows.rs
apps/cosam-editor/src/ui/: day_tabs.rs  detail_pane.rs  editor.rs  event_card.rs  mod.rs  panel_edit_window.rs  schedule_data.rs  settings_window.rs  sidebar.rs  web_preview.rs
apps/cosam-layout/: Cargo.toml
apps/cosam-layout/src/: cli.rs  main.rs
apps/cosam-modify/: Cargo.toml
apps/cosam-modify/src/: args.rs  load.rs  main.rs  output.rs
apps/cosam-modify/src/cmd/: create.rs  delete.rs  edge.rs  get.rs  list.rs  log.rs  mod.rs  set.rs  undo.rs
apps/cosam-modify/tests/: cli_undo_redo.rs  integration.rs
apps/cosam-viewer/: Cargo.toml
apps/cosam-viewer/src/: main.rs  state.rs  style.css
apps/cosam-viewer/src/data/: display.rs  mod.rs
apps/cosam-viewer/src/ui/: app.rs  grid.rs  mod.rs
crates/crdt-spike/: Cargo.toml
crates/crdt-spike/src/: lib.rs
crates/crdt-spike/tests/: prose_fields.rs  scenarios.rs  structured_fields.rs
crates/schedule-core/: Cargo.toml
crates/schedule-core/src/: builder.rs  converter.rs  crdt.rs  edge_cache.rs  edge_crdt.rs  edge_descriptor.rs  edge_map.rs  edit.rs  entity.rs  entity_id.rs  event_room.rs  field.rs  field_macros.rs  field_node_id.rs  field_set.rs  hotel_room.rs  lib.rs  lookup.rs  panel.rs  panel_type.rs  panel_uniq_id.rs  presenter.rs  registry.rs  schedule.rs  static_intern.rs  value.rs  value_macros.rs  widget_json.rs
crates/schedule-core/src/crdt/: edge.rs  mod.rs
crates/schedule-core/src/csv/: mod.rs
crates/schedule-core/src/data/: display_export.rs  event.rs  json_export_mode.rs  mod.rs  panel.rs  panel_id.rs  panel_set.rs  panel_type.rs  post_process.rs  post_process_tests.rs  presenter.rs  public_export.rs  relationship.rs  room.rs  schedule.rs  source_info.rs  time.rs  timeline.rs  widget_embed.rs  xlsx_export.rs  xlsx_grid.rs  xlsx_import.rs  xlsx_update.rs
crates/schedule-core/src/edge/: cache.rs  descriptor.rs  id.rs  map.rs  mod.rs  traits.rs
crates/schedule-core/src/edit/: adjust.rs  builder.rs  command.rs  context.rs  find.rs  history.rs  mod.rs  remove.rs  tests.rs
crates/schedule-core/src/entity/: id.rs  mod.rs
crates/schedule-core/src/extra_field/: mod.rs
crates/schedule-core/src/field/: callback.rs  descriptor.rs  macros.rs  mod.rs  set.rs  traits.rs
crates/schedule-core/src/file/: display_export.rs  full_export.rs  mod.rs
crates/schedule-core/src/query/: converter.rs  export.rs  mod.rs
crates/schedule-core/src/schedule/: crdt.rs  edge.rs  entity.rs  mod.rs
crates/schedule-core/src/sidecar/: mod.rs
crates/schedule-core/src/tables/: breaks.rs  event_room.rs  hotel_room.rs  mod.rs  panel.rs  panel_like.rs  panel_type.rs  presenter.rs  timeline.rs
crates/schedule-core/src/value/: cost.rs  error.rs  macros.rs  mod.rs  time.rs  timezone.rs  uniq_id.rs
crates/schedule-core/src/widget_json/: export.rs  import.rs  mod.rs  types.rs
crates/schedule-core/src/xlsx/: columns.rs  meta.rs  mod.rs
crates/schedule-core/tests/: edges_integration.rs  edit_integration.rs  schedule_integration.rs  xlsx_integration.rs
crates/schedule-data/: Cargo.toml
crates/schedule-data/src/: edge_entity_query.rs  lib.rs  uuid_v5.rs
crates/schedule-data/src/crdt/: actor.rs  automerge_backend.rs  backend.rs  mod.rs  ops.rs
crates/schedule-data/src/edge/: event_room_to_hotel_room.rs  generic.rs  mod.rs  panel_to_event_room.rs  panel_to_panel_type.rs  panel_to_presenter.rs  presenter_to_group.rs  storage.rs  traits.rs
crates/schedule-data/src/edit/: command.rs  context.rs  history.rs  mod.rs
crates/schedule-data/src/entity/: edge.rs  event_room.rs  event_room_to_hotel_room.rs  hotel_room.rs  macros.rs  mod.rs  panel.rs  panel_to_event_room.rs  panel_to_panel_type.rs  panel_to_presenter.rs  panel_type.rs  panel_uniq_id.rs  presenter.rs  presenter_rank.rs  presenter_to_group.rs  room.rs  uuid_preference.rs
crates/schedule-data/src/field/: field_set.rs  matching.rs  (+5 more)
crates/schedule-data/tests/: direct_indexable_test.rs  entity_fields_integration.rs  indexable_fields_test.rs  simple_indexable_test.rs  uuid_registry_test.rs
crates/schedule-layout/: Cargo.toml
crates/schedule-layout/src/: brand.rs  color.rs  config.rs  document.rs  fonts.rs  geometry.rs  grid.rs  idml.rs  lib.rs  model.rs  qr.rs  time_fmt.rs  timegrid.rs  typst_gen.rs
crates/schedule-macro/: Cargo.toml
crates/schedule-macro/src/: callback_input.rs  callback_output.rs  common_input.rs  common_output.rs  edge_input.rs  edge_output.rs  input.rs  lib.rs  output.rs  stored_input.rs  stored_output.rs
crates/schedule-macro/tests/: debug_tests.rs
crates/schedule-widget-format/: Cargo.toml
crates/schedule-widget-format/src/: config.rs  lib.rs  schedule.rs
editor/: Cargo.toml
editor/src/: main.rs
editor/src/data/: event.rs  mod.rs  panel_type.rs  presenter.rs  room.rs  schedule.rs  source_info.rs  timeline.rs  xlsx_export.rs  xlsx_import.rs  xlsx_update.rs
editor/src/ui/: day_tabs.rs  editor.rs  event_card.rs  grid_view.rs  mod.rs
(+711 files in other folders)
