[workspace]
members = [
    "crates/schedule-core",
    "crates/schedule-macro",
    "crates/schedule-layout",
    "apps/cosam-convert",
    "apps/cosam-layout",
    "apps/cosam-modify",
    "apps/cosam-editor",
]
# cosam-editor-gpui and cosam-editor-dioxus are standalone workspaces in apps/
# due to a cocoa crate version conflict between gpui=0.2 and dioxus=0.7.
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause"
authors = ["Daphne Pfister"]
