[workspace]
members = [
    "crates/schedule-core",
    "crates/schedule-macro",
    "crates/schedule-layout",
    "apps/cosam-convert",
    "apps/cosam-layout",
    "apps/cosam-modify",
    "apps/cosam-editor",
    "apps/cosam-viewer",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause"
authors = ["Daphne Pfister"]
