[package]
name = "cosam-editor"
version = "0.1.0"
edition = "2024"
description = "Desktop schedule editor for Cosplay America"
license = "BSD-2-Clause"

[dependencies]
gpui = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
calamine = "0.26"
regex = "1"
umya-spreadsheet = "2"

[dev-dependencies]
serde_json = "1"
