[package]
name = "cosam-convert"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Format conversion CLI for cosam schedules"

[[bin]]
name = "cosam-convert"
path = "src/main.rs"

[features]
default = ["layout"]
layout = ["dep:schedule-layout"]

[dependencies]
anyhow = "1"
chrono = "0.4"
minify-html = "0.15"
serde_json = "1"
schedule-core = { path = "../../crates/schedule-core" }
schedule-layout = { path = "../../crates/schedule-layout", optional = true }
