[package]
name = "cosam-convert"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Format conversion CLI for cosam schedules"

[[bin]]
name = "cosam-convert"
path = "src/main.rs"

[features]
default = ["layout"]
layout = ["dep:schedule-layout", "dep:serde", "dep:toml", "dep:thiserror"]
# Enable IDML (.idml) layout export (pulls in schedule-layout's `idml` feature).
# Not in `default`, so the standard build needs no IDML/zip dependencies.
idml = ["layout", "schedule-layout/idml"]

[dependencies]
anyhow = "1"
base64 = "0.22"
chrono = "0.4"
flate2 = "1"
minify-html = "0.15"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = "1"
thiserror = { version = "1", optional = true }
toml = { version = "0.8", optional = true }
schedule-core = { path = "../../crates/schedule-core" }
schedule-layout = { path = "../../crates/schedule-layout", optional = true }
