[package]
name = "cosam-editor"
version = "0.1.0"
edition = "2024"
description = "Desktop schedule editor for Cosplay America"
license = "BSD-2-Clause"
authors = ["Daphne Pfister"]

[[bin]]
name = "cosam-editor"
path = "src/main.rs"

[dependencies]
gpui = "0.2"
gpui-component = "0.5"
gpui-component-assets = "0.5"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
rfd = "0.15"
schedule-core = { path = "../../crates/schedule-core" }
