[package]
name = "cosam-editor"
version = "0.1.0"
edition = "2024"
description = "Desktop schedule editor for Cosplay America"
license = "BSD-2-Clause"
authors = ["Daphne Pfister"]

[[bin]]
name = "cosam-editor"
path = "src/main.rs"

[dependencies]
gpui = "0.2"
gpui-component = "0.5"
gpui-component-assets = "0.5"
anyhow = "1"
indexmap = "2"
chrono = { version = "0.4", features = ["serde"] }
rfd = "0.15"
open = "5"
schedule-core = { path = "../../crates/schedule-core" }
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
