[package]
name = "cosam-layout"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI tool for generating Typst/PDF print layouts from a cosam-sched schedule JSON"

[[bin]]
name = "cosam-layout"
path = "src/main.rs"

[dependencies]
schedule-layout = { path = "../../crates/schedule-layout" }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
