[package]
name = "cosam-modify"
version = "0.1.0"
edition = "2024"
description = "Command-line schedule modifier for Cosplay America"
license = "BSD-2-Clause"
authors = ["Daphne Pfister"]

[[bin]]
name = "cosam-modify"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = "0.4"
schedule-core = { path = "../../crates/schedule-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
