[package]
name = "cosam-modify"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI editing tool for cosam schedules"

[[bin]]
name = "cosam-modify"
path = "src/main.rs"

[dependencies]
anyhow = "1"
serde_json = "1"
toml = "0.8"
schedule-core = { path = "../../crates/schedule-core" }
