[package]
name = "schedule-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Entity/field system and core schedule data model for cosam-sched"

[dependencies]
automerge = "0.6"
uuid = { version = "1.13", features = ["v4", "v5", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
inventory = "0.3"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
