[package]
name = "schedule-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Entity/field system and core schedule data model for cosam-sched"

[dependencies]
schedule-macro = { path = "../schedule-macro" }
automerge = "0.9"
uuid = { version = "1.13", features = ["v4", "v5", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
iana-time-zone = "0.1"
inventory = "0.3"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
umya-spreadsheet = "2"
csv = "1.3"
encoding_rs = "0.8"
reqwest = { version = "0.12", features = ["blocking"] }
scraper = "0.21"
base64 = "0.22"
flate2 = "1"

[features]
default = ["xlsx"]
xlsx = []
csv = []
