[package]
name = "schedule-data"
version = "0.1.0"
edition = "2021"
license = "BSD-2-Clause"
authors = ["Daphne Pfister"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v7", "serde"] }
schedule-macro = { path = "../schedule-macro" }

[dev-dependencies]
tokio-test = "0.4"
