[package]
name = "schedule-data"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core schedule data model: entities, fields, and relationships"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
uuid = { version = "1.13", features = ["v5", "v7", "serde"] }
schedule-macro = { path = "../schedule-macro" }
