[package]
name = "schedule-data"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core schedule data model: entities, fields, and relationships"

[dependencies]
automerge = "0.5"
chrono = { version = "0.4", features = ["serde"] }
directories = "5"
regex = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
toml = "0.8"
uuid = { version = "1.13", features = ["v4", "v5", "v7", "serde"] }
schedule-macro = { path = "../schedule-macro" }
