[package]
name = "schedule-macro"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Proc-macro crate providing #[derive(EntityFields)] for cosam schedule types"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
regex = "1.0"
syn = { version = "2.0", features = ["full"] }
