[package]
name = "schedule-macro"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Proc-macro support for schedule-core's field and edge descriptor generation"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
