[package]
name = "schedule-widget-format"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Shared serde DTO for the cosam-sched widget/interchange JSON format"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
serde_json = "1"
